--- a/source/02/04 Sympy.ipynb
+++ b/source/02/04 Sympy.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "def derivative_table(functions, x):\n",
     "    for f in functions:\n",
-    "        s = printing.latex(Eq(Derivative(f, x), diff(f, x)))\n",
+    "        s = printing.latex(Eq(Derivative(f, x), diff(f, x)))w\n",
     "        print(s, \"\\n\")\n",
     "\n",
     "def integral_table(functions, x):\n",
